# springboard

./: Cargo.toml  README.md  bios.rs  build.rs  disk_image.rs  fat.rs  gpt.rs  index.rs  mbr.rs  uefi.rs
api/: Cargo.toml  build.rs
api/src/: config.rs  info.rs  lib.rs
bios/boot_sector/: Cargo.toml
bios/common/: Cargo.toml
bios/stage-2/: Cargo.toml
bios/stage-2/src/: main.rs  memory_map.rs  protected_mode.rs  vesa.rs
bios/stage-3/: Cargo.toml
bios/stage-3/src/: main.rs  paging.rs  screen.rs
bios/stage-4/: Cargo.toml
bios/stage-4/src/: main.rs  memory_descriptor.rs
common/: Cargo.toml
common/config/: Cargo.toml
common/src/: framebuffer.rs  legacy_memory_region.rs  level_4_entries.rs  lib.rs  load_kernel.rs  logger.rs
docs/: create-disk-image.md
docs/migration/: README.md  rust-osdev.md
src/: lib.rs  uefi.rs
tests/: config_file.rs  default_settings.rs  higher_half.rs  lto.rs  map_phys_mem.rs  min_stack.rs  pie.rs  ramdisk.rs
tests/runner/: Cargo.toml
tests/runner/src/: lib.rs
tests/test_kernels/config_file/: Cargo.toml
tests/test_kernels/default_settings/: Cargo.toml
tests/test_kernels/higher_half/: Cargo.toml
tests/test_kernels/higher_half/src/: lib.rs
tests/test_kernels/lto/: Cargo.toml
tests/test_kernels/map_phys_mem/: Cargo.toml
tests/test_kernels/map_phys_mem/src/: lib.rs
tests/test_kernels/min_stack/: Cargo.toml
tests/test_kernels/pie/: Cargo.toml
tests/test_kernels/ramdisk/: Cargo.toml
uefi/: Cargo.toml
uefi/src/: main.rs  memory_descriptor.rs
