[package]
name = "springboard-x86_64-uefi"
version.workspace = true
edition = "2021"
description = "UEFI bootloader for x86_64"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
springboard-api = { workspace = true }
springboard-x86_64-common = { workspace = true }
springboard-boot-config = { workspace = true }
log = "0.4.14"
x86_64 = "0.14.8"
serde-json-core = "0.5.0"
uefi = "0.20.0"
