[package]
authors = ["Az <azyklus@disroot.org>"]
name = "springboard-x86_64-bios-stage-4"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Fourth BIOS stage of the `springboard` crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
springboard-api = { workspace = true }
springboard-x86_64-common = { workspace = true }
springboard-x86_64-bios-common = { workspace = true }
springboard-boot-config = { workspace = true }
log = "0.4.14"
x86_64 = "0.14.8"
rsdp = "2.0.0"
usize_conversions = "0.2.0"
serde-json-core = "0.5.0"

# This currently causes a cargo warning, but it is required for publishing to crates.io.
# See https://github.com/rust-lang/cargo/issues/8264 for details.
[profile.stage-4]
inherits = "release"
debug = true
overflow-checks = true
